fix: tabs alignment

--- a/src/sass/_staffstudents.scss
+++ b/src/sass/_staffstudents.scss
@@ -482,9 +482,9 @@ html.rqf-staff-page {
 
   /*Tabbed content*/
 
-  div#mdcolumn ul.tabNavigation li a {
-    padding: 5px;
-  }
+  // div#mdcolumn ul.tabNavigation li a {
+  //   padding: 5px;
+  // }
 
   div#mdcolumn ul.tabNavigation li a.selected, div#mdcolumn ul.tabNavigation li a.selected:hover {
     //color: #008E00;
