--- a/src/sass/_vintage_standard-styles.scss
+++ b/src/sass/_vintage_standard-styles.scss
@@ -1167,7 +1167,7 @@ div#mdcolumn ul.tabNavigation {
   background-color:#fff;
   border-bottom:1px solid #CCC;
   font-size:90%;
-  line-height:14px;
+  // line-height:14px;
   list-style: none;
   margin: 0;
   padding: 11px 0 5px;
